# polyapi-python

./: .flake8  .gitignore  LICENSE  README.md  check_mypy.sh  dev_requirements.txt  gen_py_types.py  pyproject.toml  requirements.txt  scratch.py  test_bash.sh  test_script.py
.github/workflows/: polyapi-tests.yml  polyapi-update-python-package.yml  python-ci.yml  update-pre-built-python-image.yaml
.github/workspace/: update-pre-built-python-image.yaml
polyapi/: __init__.py  __main__.py  api.py  auth.py  cli.py  cli_constants.py  client.py  config.py  constants.py  deployables.py  error_handler.py  exceptions.py  execute.py  foo.json  foo.py  function_cli.py  generate.py  http_client.py  parser.py  poly_custom.py  poly_schemas.py  poly_tables.py  prepare.py  rendered_spec.py  schema.py  server.py  sync.py  typedefs.py  utils.py  variables.py  version_check.py  webby.py  webhook.py
tests/: test_api.py  test_async_proof.py  test_auth.py  test_client.py  test_dependency_pins.py  test_deployables.py  test_function_cli.py  test_generate.py  test_parser.py  test_poly_custom.py  test_poly_schemas.py  test_rendered_spec.py  test_schema.py  test_server.py  test_tabi.py  test_utils.py  test_variables.py  test_version_check.py
