[build-system]
requires = ["setuptools>=61.2", "wheel"]

[project]
name = "polyapi-python"
version = "0.3.7"
description = "The Python Client for PolyAPI, the IPaaS by Developers for Developers"
authors = [{ name = "Dan Fellin", email = "dan@polyapi.io" }]
dependencies = [
    "requests>=2.32.3",
    "typing_extensions>=4.12.2",
    "jsonschema-gentypes==2.6.0",
    "pydantic==2.6.4",
    "stdlib_list==0.10.0",
    "colorama==0.4.4",
    "python-socketio[asyncio_client]==5.11.1",
    "truststore==0.8.0",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/polyapi/polyapi-python"

[tool.setuptools]
packages = ["polyapi"]

[tools.setuptools.packages.find]
include = ["polyapi"]
exclude = ["polyapi/poly*", "polyapi/vari*", "polyapi/.config.env", "polyapi/cached_deployables*", "polyapi/deployments_revision"]  # exclude the generated libraries from builds

[tool.mypy]
# for now redef errors happen sometimes, we will clean this up in the future!
disable_error_code = "no-redef,name-defined"
implicit_optional = true
